@@ -1,3 +1,10 @@
+2005-10-26 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* src/mcs51/gen.c (genMinus): fixed bug 1270906: reverse subtraction,
+	carry must be complemented too
+	* src/mcs51/peeph.def: addded rule 262 to remove double cpl c, which
+	could be emitted by genMinus
+
 2005-10-25 Bernhard Held <bernhard AT bernhardheld.de>
 
 	* src/SDCCast.c (addCast): added promotion for bit variables
